--- a/pampview.html
+++ b/pampview.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img src="https://user-images.githubusercontent.com/75771587/169977406-5e444854-52ee-40b6-a757-8ff5226b425a.jpg", alt="리플렛1" width="500" height="124"><br>
+  <img src="https://user-images.githubusercontent.com/75771587/208385291-3d067465-9271-478f-9560-860f8896d7da.png", alt="리플렛1" width="500" height="124"><br>
   <img src="https://user-images.githubusercontent.com/75771587/169977420-f36f848c-2202-402a-bbda-f86c76557b6e.jpg", alt="리플렛2" width="300" height="600">
   <script src="script.js"></script>
 </body>
