--- a/pampview.html
+++ b/pampview.html
@@ -10,7 +10,7 @@
 
 <body>
   <img src="https://user-images.githubusercontent.com/75771587/208385291-3d067465-9271-478f-9560-860f8896d7da.png", alt="리플렛1" width="500" height="124"><br>
-  <img src="https://user-images.githubusercontent.com/75771587/169977420-f36f848c-2202-402a-bbda-f86c76557b6e.jpg", alt="리플렛2" width="300" height="600">
+  <img src="https://user-images.githubusercontent.com/75771587/208385556-1a78dfda-387c-46c8-8f48-e36e8c357a9c.png", alt="리플렛2" width="300" height="600">
   <script src="script.js"></script>
 </body>
 
